[gd_scene load_steps=5 format=2]

[ext_resource path="res://Screens/Fight/RubikMonoOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://EndModal.gd" type="Script" id=2]
[ext_resource path="res://Things/Modal/Modal.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 31
font_data = ExtResource( 1 )

[node name="Modal" instance=ExtResource( 3 )]
script = ExtResource( 2 )
title = "Thanks"
text = "Thank you for playing!

I really appreciate it!"

[node name="CenterContainer" parent="CenterContainer/NinePatchRect" index="0"]
margin_top = 60.0
margin_bottom = 426.0

[node name="Text" parent="CenterContainer/NinePatchRect/CenterContainer" index="0"]
margin_top = 79.0
margin_bottom = 286.0
text = "Thank you for playing!

I really appreciate it!"

[node name="Title" parent="CenterContainer/NinePatchRect" index="1"]
text = "Thanks"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/NinePatchRect" index="3"]
margin_left = 43.0
margin_top = 165.0
margin_right = 607.0
margin_bottom = 711.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/NinePatchRect/CenterContainer2" index="0"]
margin_left = 98.0
margin_top = 253.0
margin_right = 466.0
margin_bottom = 292.0
mouse_filter = 2

[node name="Label" type="Label" parent="CenterContainer/NinePatchRect/CenterContainer2/HBoxContainer" index="0"]
margin_right = 52.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0313726, 0.0941176, 0.12549, 1 )
text = "~ "

[node name="Label2" type="Label" parent="CenterContainer/NinePatchRect/CenterContainer2/HBoxContainer" index="1"]
margin_left = 56.0
margin_right = 368.0
margin_bottom = 39.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.266667, 0.67451, 0.945098, 1 )
text = "@SanderVhove"

[connection signal="open" from="." to="." method="_on_Modal_open"]
[connection signal="gui_input" from="CenterContainer/NinePatchRect/CenterContainer2/HBoxContainer/Label2" to="." method="_on_Label2_gui_input"]
